# server-scripts

./: .gitignore  README.md  environment.yaml
filter_hits/: README.md  __main__.py  environment.yaml  pyproject.toml
filter_hits/filter_hits/: __main__.py
filter_hits/tests/: test_filtering.py
filter_hits/tests/data/: mmseqs_test.m8
